Update AI codes

--- a/temp codes/torch_image_classification.ipynb
+++ b/temp codes/torch_image_classification.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "img = Image.open('/Users/mehdirexon/PycharmProjects/Kharazmi/models/image classification/images/PETE/15.jpg')  # Load your image\n",
+    "img = Image.open('input_ur_image')  # Load your image\n",
     "img = transform(img)\n",
     "img = img.unsqueeze(0)  # Add a batch dimension"
    ],
